--- a/views/about.ejs
+++ b/views/about.ejs
@@ -6,6 +6,7 @@
 <html>
   <head>
     <title><%= title %></title>
+    <! CSS from styleabout.css>
     <link rel='stylesheet' href='/stylesheets/styleabout.css' />
   </head>
   <body>
