--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,74 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+/* Ripudaman    301221570    2/5/2022 */
+* {
+  box-sizing: border-box;
+  margin: 3px;
+  padding: 0;
+  
+}
+.f1{
+  background-color: black;
+}
+.f{
+  margin-bottom: 0px;
+ margin-top: 200px;
+  color: white ;
+  margin-left: 450px;
+  font-size: 40px;
+}
+.wel1{
+ 
+  font-size: 55px ;
+  margin-top: 80px;
+  margin-left: 450px;
+}
+.name1{
+  margin-top: 10px;
+  margin-left: 465px;
+  font-size: 20px;
+  font-style: italic;
 }
 
-a {
-  color: #00B7FF;
+ li, a, button{
+   font-family: "Montserrat",sans-serif;
+   font-weight: 500;
+   font-size: 16px;
+   color :black;
+   text-decoration: none;
+ }
+ header{
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 20px 10%;
+
+ }
+ .nav_links{
+
+  list-style: none;
+ }
+ .nav_links li{
+   display: inline-block;
+   padding: 0px 10px ;
+
+ }
+.nav_links li a {
+  transition: 0s;
+}
+.nav_links li a:hover{
+  color: #0088a9;
+}
+button{
+  margin-left: 300px;
+  padding: 9px 30px;
+  background-color: white;
+  border: none;
+  border-radius: 40px;
+  
+  transition: 0s;
+}  
+
+.myimg{
+margin-left: 500px;
+
 }
