--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,46 @@
+<! Ripudaman
+   301221570
+   2/5/2022 ––>
 <!DOCTYPE html>
 <html>
   <head>
     <title><%= title %></title>
+    <! Css from style.css>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    
+    <header>
+      <img class="logo" src="/images/logo.png" alt="logo" style="width: 100px;height: 100px;">
+<nav>
+  <!  navigation links>
+<ul class="nav_links">
+    <li><a href="http://localhost:3000">Home</a></li>
+    <li><a href="http://localhost:3000/projects">Projects</a></li>
+    <li><a href="http://localhost:3000/services">Services</a></li>
+    <li><a href="http://localhost:3000/about">About Me</a></li>
+    <li><a href="http://localhost:3000/contact">Contact Me</a></li>
+    
+      <a class="cta" href="#"><button></button></a>
+    </ul>
+  </nav>
+
+  
+    </header>
+
+    <!  adding my image>
+    <img class="myimg" src="/images/myimg_circle.png" alt="img" style="width: 200px;height:200px;">
+    <div class="wel">
+      <div class="display">
+
+      <h1 class= "wel1">WELCOME</h1>
+      <p class="name1">I am Ripudaman,a Data Analyst.</p>
+        
+
+    </div></div>
+    
   </body>
 </html>
+<!  including footer>
+
+<% include partials\footer.ejs %>
