--- a/views/about.ejs
+++ b/views/about.ejs
@@ -15,11 +15,11 @@
 
 <nav>
 <ul class="nav_links">
-    <li><a href="http://localhost:3000">Home</a></li>
-    <li><a href="http://localhost:3000/projects">Projects</a></li>
-    <li><a href="http://localhost:3000/services">Services</a></li>
-    <li><a href="http://localhost:3000/about">About Me</a></li>
-    <li><a href="http://localhost:3000/contact">Contact Me</a></li>
+    <li><a href="/">Home</a></li>
+    <li><a href="/projects">Projects</a></li>
+    <li><a href="/services">Services</a></li>
+    <li><a href="/about">About Me</a></li>
+    <li><a href="/contact">Contact Me</a></li>
     
       <a class="cta" href="#"><button></button></a>
     </ul>
@@ -40,7 +40,7 @@
     <p>engineering course at Centennial College,Toronto. </p>
 </section>
 <p class ="download">You can download the resume.</p>
-<a href="C:\Users\RIPUSAMANB\Desktop\Comp 229\Myr.pdf" download>Download resume</a>
+<a href="https://drive.google.com/file/d/1IWPF_c8NWAEP7KB2NHa0FOboCrmeKGba/view?usp=sharing" download>Download resume</a>
 <footer class="ids">
       
     <ul class="social">
