--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,3 +1,4 @@
+
 <! Ripudaman
    301221570
    2/5/2022 ––>
@@ -15,12 +16,12 @@
         <img class="logo" src="/images/logo.png" alt="logo" style="width: 100px;height: 100px;">
 
 <nav><! navigation links>
-<ul class="nav_links">
-    <li><a href="http://localhost:3000">Home</a></li>
-    <li><a href="http://localhost:3000/projects">Projects</a></li>
-    <li><a href="http://localhost:3000/services">Services</a></li>
-    <li><a href="http://localhost:3000/about">About Me</a></li>
-    <li><a href="http://localhost:3000/contact">Contact Me</a></li>
+  <ul class="nav_links">
+    <li><a href="/">Home</a></li>
+    <li><a href="/projects">Projects</a></li>
+    <li><a href="/services">Services</a></li>
+    <li><a href="/about">About Me</a></li>
+    <li><a href="/contact">Contact Me</a></li>
     
       <a class="cta" href="#"><button></button></a>
     </ul>
@@ -53,7 +54,19 @@
         <h6 >E-mail</h6>
         <p class="t">21ripudaman1997@gmail.com</p></div>
     </div>
+    <br>
+    <form>
+      E-mail :
+      <br>
+      <input type="text" name="mail">
+      </form>   
 
+      <form >
+        Your message :
+        <br>
+        <textarea  id="textboxid" type="text" name="tbox" cols="40" rows="5"></textarea>
+        </form>   
+        <input type="submit">
         
 <footer class="ids">
       
