--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,12 +14,12 @@
       <img class="logo" src="/images/logo.png" alt="logo" style="width: 100px;height: 100px;">
 <nav>
   <!  navigation links>
-<ul class="nav_links">
-    <li><a href="http://localhost:3000">Home</a></li>
-    <li><a href="http://localhost:3000/projects">Projects</a></li>
-    <li><a href="http://localhost:3000/services">Services</a></li>
-    <li><a href="http://localhost:3000/about">About Me</a></li>
-    <li><a href="http://localhost:3000/contact">Contact Me</a></li>
+  <ul class="nav_links">
+    <li><a href="/">Home</a></li>
+    <li><a href="/projects">Projects</a></li>
+    <li><a href="/services">Services</a></li>
+    <li><a href="/about">About Me</a></li>
+    <li><a href="/contact">Contact Me</a></li>
     
       <a class="cta" href="#"><button></button></a>
     </ul>
