--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,7 @@
   margin: 3px;
   padding: 0;
   
+  
 }
 .f1{
   background-color: black;
@@ -13,7 +14,7 @@
   margin-bottom: 0px;
  margin-top: 200px;
   color: white ;
-  margin-left: 450px;
+  text-align: center;
   font-size: 40px;
 }
 .wel1{
@@ -28,6 +29,7 @@
   font-size: 20px;
   font-style: italic;
 }
+p, h1{text-align: center;}
 
  li, a, button{
    font-family: "Montserrat",sans-serif;
@@ -69,6 +71,9 @@ button{
 }  
 
 .myimg{
-margin-left: 500px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 
 }
