--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -30,7 +30,7 @@
   
     </header>
     
-    
+    <div  class ="aa">
     <div class="b1">
 
 
@@ -54,6 +54,7 @@
         <h6 >E-mail</h6>
         <p class="t">21ripudaman1997@gmail.com</p></div>
     </div>
+  </div>
     <br>
     <form>
       E-mail :
