--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,8 +33,8 @@
     <div class="wel">
       <div class="display">
 
-      <h1 class= "wel1">WELCOME</h1>
-      <p class="name1">I am Ripudaman,a Data Analyst.</p>
+      <h1 >WELCOME</h1>
+      <p>I am Ripudaman,a Data Analyst.</p>
         
 
     </div></div>
